fix header and banner width on small screen

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,9 @@ header {
   align-items: baseline;
   gap: 16px;
   justify-content: space-between;
+  width: 100%;
+  min-width: calc(1100px + 180px + 16px + 32px);
+  box-sizing: border-box;
 }
 
 header h1 {
@@ -118,6 +121,9 @@ header h1 {
   min-height: 28px;
   text-align: center;
   font-size: 20px;
+  width: 100%;
+  min-width: calc(1100px + 180px + 16px + 32px);
+  box-sizing: border-box;
 }
 
 .action-banner.bump {
